# zigboot

./: .gitignore  CMakeLists.txt  README.md  build.zig  collide.zig  image.zig  main.zig  prj.conf  testing.zig  tlv.zig  zephyr.zig
nswap/: build.zig
nswap/src/: flash.zig  main.zig  swap.zig
sim/: build.zig  ed25519.priv
sim/src/: flash.zig  main.zig  status-page.zig  swap-hash.zig
src/: config.zig  empty.c  flash.zig  pdump.zig  sim-main.zig  status.zig  swap.zig  sys.zig  test.zig
src/flash/: native.zig  sim.zig
src/sim/: status-page.zig  swap-hash.zig
src/status/: paged.zig
zephyr/: errno.zig  flash.zig
